src/css/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/* Color of appent and prepend block of inputs */
.input-group-text {
  background-color: #e9ecefd4;
}

.calendar img {
  width: 1.5rem;
  height: 1.5rem;
}
.calendar .react-datepicker__input-container,
.calendar .react-datepicker-wrapper {
  display: flex;
  position: relative;
  -webkit-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 1%;
  margin-bottom: 0;
  
}
.calendar .react-datepicker__input-container {
  width: 100%;
}
.calendar input {
  display: block;
  width: 100%;
  height: calc(1.5em + .75rem + 2px);
  padding: .375rem .75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid #ced4da;    
  border-radius: .25rem;
  border-top-right-radius: 0rem;
  border-bottom-right-radius: 0rem;
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}
.calendar .input-group-text:hover {
  background-color: white;
}

.input-group-sm .input-group-prepend {
  margin-right: -4px;
}
.input-group-sm .input-group-append {
  margin-left: -4px;
}

